unpackaged/main/default/objects/Case/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>Created for TAGCRM-693, assigned to picklist</description>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Operations</fullName>
                <default>true</default>
                <label>Sales Operations</label>
            </value>
            <value>
                <fullName>Data Governance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>