unpackaged/main/default/objects/Case/fields/Is_Case_Originator__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Originator__c</fullName>
    <description>created for TAGCRM-826</description>
    <formula>$User.Username =  CreatedBy.Username</formula>
    <label>Is Case Originator</label>
    <type>Checkbox</type>
</CustomField>