unpackaged/main/default/objects/Case/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>created for TAGCRM-693</description>
    <formula>RecordType.Name</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>