unpackaged/main/default/objects/Case/recordTypes/Internal_Case.recordType-meta.xml
<RecordType>
    <fullName>Internal_Case</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Internal Case</label>
</RecordType>