unpackaged/main/default/objects/Case/listViews/Data_Governance_Case.listView-meta.xml
<ListView>
    <fullName>Data_Governance_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Data Governance</label>
    <queue>Data_Governance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>