unpackaged/main/default/objects/Case/listViews/My_Created_Cases.listView-meta.xml
<ListView>
    <fullName>My_Created_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Case_Originator__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Created Cases</label>
</ListView>