unpackaged/main/default/objects/Case/listViews/Sales_Operations_Case.listView-meta.xml
<ListView>
    <fullName>Sales_Operations_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Sales Operations</label>
    <queue>Sales_Operations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>